RCU-WS-003-Welcome-Section

--- a/index.html
+++ b/index.html
@@ -83,6 +83,57 @@
 			</div>
 		</section>
 		<!-- End Banner Area -->
+		<!-- Start Product Area -->
+		<section id="services" class="title-bg section-full">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-lg-8">
+						<div class=" text-center">
+							<h2 class="h1 welcome-title">Welcome to RCU Development</h2>
+						</div>
+					</div>
+				</div>
+				<div class="row justify-content-center">
+					<div class="col-lg-3 col-sm-6">
+						<div class="single-product">
+							<div class="icon">
+								<img src="./img/84px/íconos RCU-01.png" alt="first_welcome_icon"/>
+							</div>
+							<div class="desc">
+								<h4 class="welcome-title">Title 1</h4>
+								<p class="welcome-text">Descripción breve del primer item</p>
+								<a class="welcome-text" href="url">LEER MÁS></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-sm-6">
+						<div class="single-product">
+							<div class="icon">
+								<img src="./img/84px/íconos RCU-01.png" alt="first_welcome_icon"/>
+							</div>
+							<div class="desc">
+								<h4 class="welcome-title">Title 1</h4>
+								<p class="welcome-text">Descripción breve del primer item</p>
+								<a class="welcome-text" href="url">LEER MÁS></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-sm-6">
+						<div class="single-product">
+							<div class="icon">
+								<img src="./img/84px/íconos RCU-01.png" alt="first_welcome_icon"/>
+							</div>
+							<div class="desc">
+								<h4 class="welcome-title">Title 1</h4>
+								<p class="welcome-text">Descripción breve del primer item</p>
+								<a class="welcome-text" href="url">LEER MÁS></a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- End Product Area -->
 		<!-- Start About Area -->
 		<section class="section-full gray-bg">
 			<div class="container">
@@ -129,66 +180,7 @@
 			</div>
 		</section>
 		<!-- End About Area -->
-		<!-- Start Product Area -->
-		<section id="services" class="title-bg section-full">
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-lg-8">
-						<div class="product-area-title text-center">
-							<p class="text-white text-uppercase">Why Choose Us</p>
-							<h2 class="text-white h1">We ensure perfect quality Digital <br> products for you</h2>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-3 col-sm-6">
-						<div class="single-product">
-							<div class="icon">
-								<span class="lnr lnr-star"></span>
-							</div>
-							<div class="desc">
-								<h4>Unique Design</h4>
-								<p>Most people who work in an office environment, buy computer products, or have </p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-3 col-sm-6">
-						<div class="single-product">
-							<div class="icon">
-								<span class="lnr lnr-magic-wand"></span>
-							</div>
-							<div class="desc">
-								<h4>Appropriate UX</h4>
-								<p>Today, many people rely on computers to do homework, work, and create or store useful</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-3 col-sm-6">
-						<div class="single-product">
-							<div class="icon">
-								<span class="lnr lnr-sun"></span>
-							</div>
-							<div class="desc">
-								<h4>Perfect Visual</h4>
-								<p>Having a baby can be a nerve wracking experience for new parents – not the nine months </p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-3 col-sm-6">
-						<div class="single-product">
-							<div class="icon">
-								<span class="lnr lnr-layers"></span>
-							</div>
-							<div class="desc">
-								<h4>Different Layout</h4>
-								<p>It won’t be a bigger problem to find one video game lover in your neighbor. Since the </p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- End Product Area -->
+
 		<!-- Start Progress Bar Area -->
 		<div class="container pt-150">
 			<div class="row">
