--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Favicon-->
-	<link rel="shortcut icon" href="img/fav.png">
+	<link rel="shortcut icon" href="img/RCU/RCU-icon.png">
 	<!-- Author Meta -->
 	<meta name="author" content="CodePixar">
 	<!-- Meta Description -->
@@ -14,9 +14,9 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Agency</title>
+	<title>RCU</title>
 
-	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,600' rel='stylesheet'>
 		<!--
 		CSS
 		============================================= -->
@@ -26,6 +26,7 @@
 		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/bxslider.min.css">
 	</head>
 	<body>
 		<div id="top"></div>
@@ -129,6 +130,28 @@
 			</div>
 		</section>
 		<!-- End About Area -->
+		<!-- Start Why Us Area -->
+		<section class="container slider-container">
+			<div class="row">
+				<div class="col-xs-12 col-md-6">
+					<h1 class="section-slider-title">¿Por qué nosotros?</h2>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum qui omnis, vel ad tempore rerum doloribus dolores, nam laboriosam doloremque vitae delectus. Nobis asperiores eos beatae impedit, rem placeat modi?</p>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum qui omnis, vel ad tempore rerum doloribus dolores, nam laboriosam doloremque vitae delectus. Nobis asperiores eos beatae impedit, rem placeat modi?</p>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum qui omnis, vel ad tempore rerum doloribus dolores, nam laboriosam doloremque vitae delectus. Nobis asperiores eos beatae impedit, rem placeat modi?</p>
+				</div>
+				<div class="col-xs-12 col-md-6">
+					<div class="slider">
+						<div class="element-1">
+							<img src="./img/slider/slide-1.png" alt="">
+						</div>
+						<div class="element-2">
+							<img src="./img/slider/slide-2.png" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- End Why Us Area -->
 		<!-- Start Product Area -->
 		<section id="services" class="title-bg section-full">
 			<div class="container">
@@ -275,9 +298,6 @@
 					<a class="filter" data-filter=".category-6">Print Material</a>
 				</div>
 			</div>
-
-
-
 			<div id="filter-content" class="row no-gutters mt-70">
 				<div class="mix category-1 col-lg-3 col-md-4 col-sm-6 single-filter-content content-1" data-myorder="1">
 					<div class="overlay overlay-bg-content d-flex align-items-center justify-content-center flex-column">
@@ -733,7 +753,7 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<div class="footer-icon">
-								<img src="img/RCU-logo-footer.png">
+								<img src="img/RCU/RCU-logo-footer.png">
 							</div>
 						</div>
 					</div>
@@ -760,6 +780,7 @@
 		</footer>
 
 		<script src="js/vendor/jquery-2.2.4.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 		<script src="js/vendor/bootstrap.min.js"></script>
 		<script src="js/jquery.ajaxchimp.min.js"></script>
