RCU-WS-004-Adding Our Projects Section

--- a/index.html
+++ b/index.html
@@ -817,6 +817,6 @@
 		<script src="js/owl.carousel.min.js"></script>
 		<script src="js/mixitup.min.js"></script>
 		<script src="js/main.js"></script>
-		<script src="js/ourprojects"></script>
+		<script src="js/ourprojects.js"></script>
 	</body>
 </html>
