--- a/index.html
+++ b/index.html
@@ -221,6 +221,9 @@
 						</div>
 					</div>
 				</div>
+				<div class="row justify-content-center">
+					<i class="fa fa-caret-down moreProjects" aria-hidden="true"></i>
+				</div>
 			</div>
 
 			<!-- Modal -->
