Update code of our services
edition of the styles

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 	</section>
 	<!-- End Product Area -->
 	<!--Start Our Services Area-->
-	<section id="services" class="title-bg section-full">
+	<section id="services" class="title-bg section-full our-services-container">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-8">
@@ -215,87 +215,87 @@
 			</div>
 			<div class="row justify-content-center">
 
-					<div class="col-lg-3 col-sm-6">
-						<div class="single-product">
+					<div class="col-lg-3 col-sm-6" >
+						<div class="single-product our-services-card">
 							<div class="icon">
 								<div class="icon">
 									<img src="./img/84 px/íconos RCU-04.png" alt="first_services_icon" />
 								</div>
 							</div>
 							<div class="desc">
-								<h4>Web Development</h4>
-								<p>Most people who work in an office environment, buy computer products, or have </p>
+								<h4 class="our-services-title">Web Development</h4>
+								<p class="our-services-text">Most people who work in an office environment, buy computer products, or have </p>
 							</div>
 						</div>
 					</div>
 
 					<div class="col-lg-3 col-sm-6">
-						<div class="single-product">
+						<div class="single-product our-services-card">
 							<div class="icon">
 								<div class="icon">
 									<img src="./img/84 px/íconos RCU-05.png" alt="second_services_icon" />
 								</div>
 							</div>
 							<div class="desc">
-								<h4>App Dev</h4>
-								<p>Having a baby can be a nerve wracking experience for new parents – not the nine
+								<h4 class="our-services-title">App Dev</h4>
+								<p class="our-services-text">Having a baby can be a nerve wracking experience for new parents – not the nine
 									months
 								</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-3 col-sm-6">
-						<div class="single-product">
+						<div class="single-product our-services-card">
 							<div class="icon">
 								<div class="icon">
 									<img src="./img/84 px/íconos RCU-06.png" alt="third_services_icon" />
 								</div>
 							</div>
 							<div class="desc">
-								<h4>Graphic design</h4>
-								<p>It won’t be a bigger problem to find one video game lover in your neighbor. Since the
+								<h4 class="our-services-title">Graphic design</h4>
+								<p class="our-services-text">It won’t be a bigger problem to find one video game lover in your neighbor. Since the
 								</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-3 col-sm-6">
-						<div class="single-product">
+						<div class="single-product our-services-card">
 							<div class="icon">
 								<div class="icon">
 									<img src="./img/84 px/íconos RCU-07.png" alt="fourth_services_icon" />
 								</div>
 							</div>
 							<div class="desc">
-								<h4>Mentoring</h4>
-								<p>Most people who work in an office environment, buy computer products, or have </p>
+								<h4 class="our-services-title">Mentoring</h4>
+								<p class="our-services-text">Most people who work in an office environment, buy computer products, or have </p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-3 col-sm-6">
-						<div class="single-product">
+						<div class="single-product our-services-card">
 							<div class="icon">
 								<div class="icon">
 									<img src="./img/84 px/íconos RCU-08.png" alt="fifth_services_icon" />
 								</div>
 							</div>
 							<div class="desc">
-								<h4>Tec Support</h4>
-								<p>Having a baby can be a nerve wracking experience for new parents – not the nine
+								<h4 class="our-services-title">Tec Support</h4>
+								<p class="our-services-text">Having a baby can be a nerve wracking experience for new parents – not the nine
 									months
 								</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-3 col-sm-6">
-						<div class="single-product">
+						<div class="single-product our-services-card">
 							<div class="icon">
 								<div class="icon">
 									<img src="./img/84 px/íconos RCU-09.png" alt="sixth_services_icon" />
 								</div>
 							</div>
 							<div class="desc">
-								<h4>More</h4>
-								<p>It won’t be a bigger problem to find one video game lover in your neighbor. Since the
+								<h4 class="our-services-title">More</h4>
+								<p class="our-services-text">It won’t be a bigger problem to find one video game lover in your neighbor. Since the
 								</p>
 							</div>
 						</div>
