add breakpoints to containers

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					</div>
 				</div>
 				<div class="row justify-content-center">
-					<div class="col-lg-3 col-sm-6">
+					<div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
 						<div class="single-product">
 							<div class="icon">
 								<img src="./img/84px/íconos RCU-01.png" alt="first_welcome_icon"/>
@@ -106,7 +106,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-sm-6">
+					<div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
 						<div class="single-product">
 							<div class="icon">
 								<img src="./img/84px/íconos RCU-01.png" alt="first_welcome_icon"/>
@@ -118,7 +118,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-sm-6">
+					<div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
 						<div class="single-product">
 							<div class="icon">
 								<img src="./img/84px/íconos RCU-01.png" alt="first_welcome_icon"/>
