--- a/index.html
+++ b/index.html
@@ -209,7 +209,6 @@
 				<div class="col-lg-8">
 					<div class="product-area-title text-center">
 						<p class="text-white h1">Our Services</p>
-						<!--h2 class="text-white h1 text-uppercase">We ensure perfect quality Digital <br> products for you</h2-->
 					</div>
 				</div>
 			</div>
@@ -223,7 +222,7 @@
 							</div>
 							<div class="desc">
 								<h4 class="our-services-title">Web Development</h4>
-								<p class="our-services-text">Most people who work in an office environment, buy computer products, or have </p>
+								<p class="our-services-text">cursus in hac habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc</p>
 							</div>
 						</div>
 					</div>
@@ -237,9 +236,7 @@
 							</div>
 							<div class="desc">
 								<h4 class="our-services-title">App Dev</h4>
-								<p class="our-services-text">Having a baby can be a nerve wracking experience for new parents – not the nine
-									months
-								</p>
+								<p class="our-services-text">cursus in hac habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc</p>
 							</div>
 						</div>
 					</div>
@@ -252,8 +249,7 @@
 							</div>
 							<div class="desc">
 								<h4 class="our-services-title">Graphic design</h4>
-								<p class="our-services-text">It won’t be a bigger problem to find one video game lover in your neighbor. Since the
-								</p>
+								<p class="our-services-text">cursus in hac habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc</p>
 							</div>
 						</div>
 					</div>
@@ -266,7 +262,7 @@
 							</div>
 							<div class="desc">
 								<h4 class="our-services-title">Mentoring</h4>
-								<p class="our-services-text">Most people who work in an office environment, buy computer products, or have </p>
+								<p class="our-services-text">cursus in hac habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc</p>
 							</div>
 						</div>
 					</div>
@@ -279,9 +275,7 @@
 							</div>
 							<div class="desc">
 								<h4 class="our-services-title">Tec Support</h4>
-								<p class="our-services-text">Having a baby can be a nerve wracking experience for new parents – not the nine
-									months
-								</p>
+								<p class="our-services-text">cursus in hac habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc</p>
 							</div>
 						</div>
 					</div>
@@ -294,8 +288,7 @@
 							</div>
 							<div class="desc">
 								<h4 class="our-services-title">More</h4>
-								<p class="our-services-text">It won’t be a bigger problem to find one video game lover in your neighbor. Since the
-								</p>
+								<p class="our-services-text">cursus in hac habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc</p>
 							</div>
 						</div>
 					</div>
