--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 			    	<div class="modal-content">
 			      		<div class="modal-body">
 							<img src="img/c2.jpg" class="image-modal-proyectos" alt="">
-							<p class="text-modal">Hola</p>
+							<p class="text-modal">Some text</p>
 			      		</div>
 			    		<button type="button" class="close nuestros-proyectos" data-dismiss="modal" aria-label="Close">
 			    			<span aria-hidden="true">&times;</span>
