--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Favicon-->
-	<link rel="shortcut icon" href="img/fav.png">
+	<link rel="shortcut icon" href="img/RCU/RCU-icon.png">
 	<!-- Author Meta -->
 	<meta name="author" content="CodePixar">
 	<!-- Meta Description -->
@@ -14,9 +14,9 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Agency</title>
+	<title>RCU</title>
 
-	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,600' rel='stylesheet'>
 		<!--
 		CSS
 		============================================= -->
@@ -26,6 +26,7 @@
 		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/bxslider.min.css">
 	</head>
 	<body>
 		<div id="top"></div>
@@ -129,116 +130,85 @@
 			</div>
 		</section>
 		<!-- End About Area -->
+		<!-- Start Why Us Area -->
+		<section class="container slider-container">
+			<div class="row">
+				<div class="col-xs-12 col-md-6">
+					<h1 class="section-slider-title">¿Por qué nosotros?</h2>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum qui omnis, vel ad tempore rerum doloribus dolores, nam laboriosam doloremque vitae delectus. Nobis asperiores eos beatae impedit, rem placeat modi?</p>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum qui omnis, vel ad tempore rerum doloribus dolores, nam laboriosam doloremque vitae delectus. Nobis asperiores eos beatae impedit, rem placeat modi?</p>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum qui omnis, vel ad tempore rerum doloribus dolores, nam laboriosam doloremque vitae delectus. Nobis asperiores eos beatae impedit, rem placeat modi?</p>
+				</div>
+				<div class="col-xs-12 col-md-6">
+					<div class="slider">
+						<div class="element-1">
+							<img src="./img/slider/slide-1.png" alt="">
+						</div>
+						<div class="element-2">
+							<img src="./img/slider/slide-2.png" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- End Why Us Area -->
 		<!-- Start Product Area -->
-		<section id="services" class="title-bg section-full ourprojects">
+		<section id="services" class="title-bg section-full">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-lg-8">
 						<div class="product-area-title text-center">
-							<h2 class="text-black h1">Nuestros Proyectos</h2>
+							<p class="text-white text-uppercase">Why Choose Us</p>
+							<h2 class="text-white h1">We ensure perfect quality Digital <br> products for you</h2>
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg-4 col-sm-12">
-						<div class="single-product2 imagenp1">
-							<div class="single-product1">
-								<div class="desc">
-									<h4>Unique Design</h4>
-									<p>Most people who work in an office environment, buy computer products, or have </p>
-								</div>
-								<div class="icon image1">
-									<button type="button" class="btn btn-info masinfo" data-toggle="modal" data-target="#exampleModalCenter"><span class="fa fa-search"></span></button>
-								</div>
+					<div class="col-lg-3 col-sm-6">
+						<div class="single-product">
+							<div class="icon">
+								<span class="lnr lnr-star"></span>
+							</div>
+							<div class="desc">
+								<h4>Unique Design</h4>
+								<p>Most people who work in an office environment, buy computer products, or have </p>
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-sm-12">
-						<div class="single-product2 imagenp2">
-							<div class="single-product1">
-								<div class="desc">
-									<h4>Appropriate UX</h4>
-									<p>Today, many people rely on computers to do homework, work, and create or store useful</p>
-								</div>
-								<div class="icon image2">
-									<button type="button" class="btn btn-info masinfo" data-toggle="modal" data-target="#exampleModalCenter"><span class="fa fa-search"></span></button>
-								</div>
+					<div class="col-lg-3 col-sm-6">
+						<div class="single-product">
+							<div class="icon">
+								<span class="lnr lnr-magic-wand"></span>
+							</div>
+							<div class="desc">
+								<h4>Appropriate UX</h4>
+								<p>Today, many people rely on computers to do homework, work, and create or store useful</p>
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-sm-12">
-						<div class="single-product2 imagenp3">
-							<div class="single-product1">
-								<div class="desc">
-									<h4>Perfect Visual</h4>
-									<p>Having a baby can be a nerve wracking experience for new parents – not the nine months </p>
-								</div>
-								<div class="icon image3">
-									<button type="button" class="btn btn-info masinfo" data-toggle="modal" data-target="#exampleModalCenter"><span class="fa fa-search"></span></button>
-								</div>
+					<div class="col-lg-3 col-sm-6">
+						<div class="single-product">
+							<div class="icon">
+								<span class="lnr lnr-sun"></span>
+							</div>
+							<div class="desc">
+								<h4>Perfect Visual</h4>
+								<p>Having a baby can be a nerve wracking experience for new parents – not the nine months </p>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-4 col-sm-12">
-						<div class="single-product2 imagenp4">
-							<div class="single-product1">
-								<div class="desc">
-									<h4>Unique Design</h4>
-									<p>Most people who work in an office environment, buy computer products, or have </p>
-								</div>
-								<div class="icon image4">
-									<button type="button" class="btn btn-info masinfo" data-toggle="modal" data-target="#exampleModalCenter"><span class="fa fa-search"></span></button>
-								</div>
+					<div class="col-lg-3 col-sm-6">
+						<div class="single-product">
+							<div class="icon">
+								<span class="lnr lnr-layers"></span>
 							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-sm-12">
-						<div class="single-product2 imagenp5">
-							<div class="single-product1">
-								<div class="desc">
-									<h4>Appropriate UX</h4>
-									<p>Today, many people rely on computers to do homework, work, and create or store useful</p>
-								</div>
-								<div class="icon image5">
-									<button type="button" class="btn btn-info masinfo" data-toggle="modal" data-target="#exampleModalCenter"><span class="fa fa-search"></span></button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-sm-12">
-						<div class="single-product2 imagenp6">
-							<div class="single-product1">
-								<div class="desc">
-									<h4>Perfect Visual</h4>
-									<p>Having a baby can be a nerve wracking experience for new parents – not the nine months </p>
-								</div>
-								<div class="icon image6">
-									<button type="button" class="btn btn-info masinfo" data-toggle="modal" data-target="#exampleModalCenter"><span class="fa fa-search"></span></button>
-								</div>
+							<div class="desc">
+								<h4>Different Layout</h4>
+								<p>It won’t be a bigger problem to find one video game lover in your neighbor. Since the </p>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="row justify-content-center">
-					<i class="fa fa-caret-down moreProjects" aria-hidden="true"></i>
-				</div>
-			</div>
-
-			<!-- Modal -->
-			<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-				<div class="modal-dialog modal-dialog-centered" role="document">
-			    	<div class="modal-content">
-			      		<div class="modal-body">
-							<img src="img/c2.jpg" class="image-modal-proyectos" alt="">
-							<p class="text-modal">Some text</p>
-			      		</div>
-			    		<button type="button" class="close nuestros-proyectos" data-dismiss="modal" aria-label="Close">
-			    			<span aria-hidden="true">&times;</span>
-			    		</button>
-			    	</div>
-			 	</div>
 			</div>
 		</section>
 		<!-- End Product Area -->
@@ -328,9 +298,6 @@
 					<a class="filter" data-filter=".category-6">Print Material</a>
 				</div>
 			</div>
-
-
-
 			<div id="filter-content" class="row no-gutters mt-70">
 				<div class="mix category-1 col-lg-3 col-md-4 col-sm-6 single-filter-content content-1" data-myorder="1">
 					<div class="overlay overlay-bg-content d-flex align-items-center justify-content-center flex-column">
@@ -786,7 +753,7 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<div class="footer-icon">
-								<img src="img/RCU-logo-footer.png">
+								<img src="img/RCU/RCU-logo-footer.png">
 							</div>
 						</div>
 					</div>
@@ -813,6 +780,7 @@
 		</footer>
 
 		<script src="js/vendor/jquery-2.2.4.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 		<script src="js/vendor/bootstrap.min.js"></script>
 		<script src="js/jquery.ajaxchimp.min.js"></script>
@@ -820,6 +788,5 @@
 		<script src="js/owl.carousel.min.js"></script>
 		<script src="js/mixitup.min.js"></script>
 		<script src="js/main.js"></script>
-		<script src="js/ourprojects.js"></script>
 	</body>
 </html>
