--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Favicon-->
-	<link rel="shortcut icon" href="img/RCU/RCU-icon.png">
+	<link rel="shortcut icon" href="img/fav.png">
 	<!-- Author Meta -->
 	<meta name="author" content="CodePixar">
 	<!-- Meta Description -->
@@ -14,9 +14,9 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>RCU</title>
+	<title>Agency</title>
 
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,600' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 		<!--
 		CSS
 		============================================= -->
@@ -26,7 +26,6 @@
 		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" href="css/bxslider.min.css">
 	</head>
 	<body>
 		<div id="top"></div>
@@ -75,9 +74,13 @@
 				<div class="row fullscreen justify-content-center align-items-center">
 					<div class="col-lg-8">
 						<div class="banner-content text-center">
-							<p class="text-uppercase text-white">We work hard, we result perfect</p>
-							<h1 class="text-uppercase text-white">Crafting Digital Agency Experiences</h1>
-							<a href="#" class="primary-btn banner-btn">Explore Us</a>
+							<img src="img/RCU_Logo.png" class="img-fluid" alt="Responsive image">
+							<p class="text-center-main">We are an Amazing Digital Content Creator Enterprise
+								<br>Ready to bring your Software/Digital 
+								<br>Ideas to the Real World
+							</p>
+							<a href="#" class="primary-btn banner-btn-b">Why Us ?</a>
+							<a href="#" class="primary-btn banner-btn">Our Services</a>
 						</div>
 					</div>
 				</div>
@@ -130,28 +133,6 @@
 			</div>
 		</section>
 		<!-- End About Area -->
-		<!-- Start Why Us Area -->
-		<section class="container slider-container">
-			<div class="row">
-				<div class="col-xs-12 col-md-6">
-					<h1 class="section-slider-title">¿Por qué nosotros?</h2>
-					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum qui omnis, vel ad tempore rerum doloribus dolores, nam laboriosam doloremque vitae delectus. Nobis asperiores eos beatae impedit, rem placeat modi?</p>
-					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum qui omnis, vel ad tempore rerum doloribus dolores, nam laboriosam doloremque vitae delectus. Nobis asperiores eos beatae impedit, rem placeat modi?</p>
-					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum qui omnis, vel ad tempore rerum doloribus dolores, nam laboriosam doloremque vitae delectus. Nobis asperiores eos beatae impedit, rem placeat modi?</p>
-				</div>
-				<div class="col-xs-12 col-md-6">
-					<div class="slider">
-						<div class="element-1">
-							<img src="./img/slider/slide-1.png" alt="">
-						</div>
-						<div class="element-2">
-							<img src="./img/slider/slide-2.png" alt="">
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- End Why Us Area -->
 		<!-- Start Product Area -->
 		<section id="services" class="title-bg section-full">
 			<div class="container">
@@ -298,6 +279,9 @@
 					<a class="filter" data-filter=".category-6">Print Material</a>
 				</div>
 			</div>
+
+
+
 			<div id="filter-content" class="row no-gutters mt-70">
 				<div class="mix category-1 col-lg-3 col-md-4 col-sm-6 single-filter-content content-1" data-myorder="1">
 					<div class="overlay overlay-bg-content d-flex align-items-center justify-content-center flex-column">
@@ -753,7 +737,7 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<div class="footer-icon">
-								<img src="img/RCU/RCU-logo-footer.png">
+								<img src="img/RCU-logo-footer.png">
 							</div>
 						</div>
 					</div>
@@ -780,7 +764,6 @@
 		</footer>
 
 		<script src="js/vendor/jquery-2.2.4.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 		<script src="js/vendor/bootstrap.min.js"></script>
 		<script src="js/jquery.ajaxchimp.min.js"></script>
