--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<div class="col-lg-8">
 						<div class="banner-content text-center">
 							<img src="img/RCU_Logo.png" class="img-fluid" alt="Responsive image">
-							<p class="text-center-main">We are an Amazing Digital Content Creator Enterprise
+							<p class="text-center-main">We are an Amazing Innovation and Mentoring Team
 								<br>Ready to bring your Software/Digital 
 								<br>Ideas to the Real World
 							</p>
