Pull Request Fixes
Minor Fixes

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Favicon-->
-	<link rel="shortcut icon" href="img/fav.png">
+	<link rel="shortcut icon" href="img/RCU/RCU-icon.png">
 	<!-- Author Meta -->
 	<meta name="author" content="CodePixar">
 	<!-- Meta Description -->
-	<meta name="description" content="">
+	<meta name="description" content="RCU Development and Innovation Team">
 	<!-- Meta Keyword -->
-	<meta name="keywords" content="">
+	<meta name="keywords" content="#Innovation #Mentoring #AppDevelopment">
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Agency</title>
+	<title>Innovation Team</title>
 
 	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 		<!--
