--- a/index.html
+++ b/index.html
@@ -213,90 +213,96 @@
 				</div>
 			</div>
 			<div class="row justify-content-center">
-					<div class="col-lg-4 col-sm-6" >
-						<div class="single-product our-services-card">
+				<div class="col-lg-4 col-sm-6">
+					<div class="single-product our-services-card">
+						<div class="icon">
 							<div class="icon">
-								<div class="icon">
-									<img src="./img/84 px/íconos RCU-04.png" alt="first_services_icon" />
-								</div>
-							</div>
-							<div class="desc">
-								<h4 class="our-services-title">Web Development</h4>
-								<p class="our-services-text">cursus in hac habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc</p>
+								<img src="./img/84 px/íconos RCU-04.png" alt="first_services_icon" />
 							</div>
 						</div>
-					</div>
-
-					<div class="col-lg-4 col-sm-6">
-						<div class="single-product our-services-card">
-							<div class="icon">
-								<div class="icon">
-									<img src="./img/84 px/íconos RCU-05.png" alt="second_services_icon" />
-								</div>
-							</div>
-							<div class="desc">
-								<h4 class="our-services-title">App Dev</h4>
-								<p class="our-services-text">cursus in hac habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-sm-6">
-						<div class="single-product our-services-card">
-							<div class="icon">
-								<div class="icon">
-									<img src="./img/84 px/íconos RCU-06.png" alt="third_services_icon" />
-								</div>
-							</div>
-							<div class="desc">
-								<h4 class="our-services-title">Graphic design</h4>
-								<p class="our-services-text">cursus in hac habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-sm-6">
-						<div class="single-product our-services-card">
-							<div class="icon">
-								<div class="icon">
-									<img src="./img/84 px/íconos RCU-07.png" alt="fourth_services_icon" />
-								</div>
-							</div>
-							<div class="desc">
-								<h4 class="our-services-title">Mentoring</h4>
-								<p class="our-services-text">cursus in hac habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-sm-6">
-						<div class="single-product our-services-card">
-							<div class="icon">
-								<div class="icon">
-									<img src="./img/84 px/íconos RCU-08.png" alt="fifth_services_icon" />
-								</div>
-							</div>
-							<div class="desc">
-								<h4 class="our-services-title">Tec Support</h4>
-								<p class="our-services-text">cursus in hac habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-sm-6">
-						<div class="single-product our-services-card">
-							<div class="icon">
-								<div class="icon">
-									<img src="./img/84 px/íconos RCU-09.png" alt="sixth_services_icon" />
-								</div>
-							</div>
-							<div class="desc">
-								<h4 class="our-services-title">More</h4>
-								<p class="our-services-text">cursus in hac habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc</p>
-							</div>
+						<div class="desc">
+							<h4 class="our-services-title">Web Development</h4>
+							<p class="our-services-text">cursus in hac habitasse platea dictumst quisque sagittis purus
+								sit amet volutpat consequat mauris nunc</p>
 						</div>
 					</div>
 				</div>
-				<div class="row justify-content-center">
 
+				<div class="col-lg-4 col-sm-6">
+					<div class="single-product our-services-card">
+						<div class="icon">
+							<div class="icon">
+								<img src="./img/84 px/íconos RCU-05.png" alt="second_services_icon" />
+							</div>
+						</div>
+						<div class="desc">
+							<h4 class="our-services-title">App Dev</h4>
+							<p class="our-services-text">cursus in hac habitasse platea dictumst quisque sagittis purus
+								sit amet volutpat consequat mauris nunc</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-sm-6">
+					<div class="single-product our-services-card">
+						<div class="icon">
+							<div class="icon">
+								<img src="./img/84 px/íconos RCU-06.png" alt="third_services_icon" />
+							</div>
+						</div>
+						<div class="desc">
+							<h4 class="our-services-title">Graphic design</h4>
+							<p class="our-services-text">cursus in hac habitasse platea dictumst quisque sagittis purus
+								sit amet volutpat consequat mauris nunc</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-sm-6">
+					<div class="single-product our-services-card">
+						<div class="icon">
+							<div class="icon">
+								<img src="./img/84 px/íconos RCU-07.png" alt="fourth_services_icon" />
+							</div>
+						</div>
+						<div class="desc">
+							<h4 class="our-services-title">Mentoring</h4>
+							<p class="our-services-text">cursus in hac habitasse platea dictumst quisque sagittis purus
+								sit amet volutpat consequat mauris nunc</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-sm-6">
+					<div class="single-product our-services-card">
+						<div class="icon">
+							<div class="icon">
+								<img src="./img/84 px/íconos RCU-08.png" alt="fifth_services_icon" />
+							</div>
+						</div>
+						<div class="desc">
+							<h4 class="our-services-title">Tec Support</h4>
+							<p class="our-services-text">cursus in hac habitasse platea dictumst quisque sagittis purus
+								sit amet volutpat consequat mauris nunc</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-sm-6">
+					<div class="single-product our-services-card">
+						<div class="icon">
+							<div class="icon">
+								<img src="./img/84 px/íconos RCU-09.png" alt="sixth_services_icon" />
+							</div>
+						</div>
+						<div class="desc">
+							<h4 class="our-services-title">More</h4>
+							<p class="our-services-text">cursus in hac habitasse platea dictumst quisque sagittis purus
+								sit amet volutpat consequat mauris nunc</p>
+						</div>
+					</div>
 				</div>
 			</div>
+			<div class="row justify-content-center">
+
+			</div>
+		</div>
 	</section>
 	<!--End Our Services Area-->
 
@@ -562,7 +568,8 @@
 					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
 						<div class="single-member">
 							<div class="thumb relative" style="background: url(img/t1.jpg);">
-								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
+								<div
+									class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
 									<div class="social d-flex align-items-center justify-content-center">
 										<a href="#"><i class="fa fa-facebook"></i></a>
 										<a href="#"><i class="fa fa-twitter"></i></a>
@@ -985,14 +992,16 @@
 					</div>
 				</div>
 				<div class="footer-description">
-					<p class="text-center">RCU Development &copy; 2019. All rights reserved. Website development by RCU Development. Template by <a href="https://colorlib.com/wp" target="_blank" rel="noopener noreferrer">Colorlib</a>.</p>
+					<p class="text-center">RCU Development &copy; 2019. All rights reserved. Website development by RCU
+						Development. Template by <a href="https://colorlib.com/wp" target="_blank"
+							rel="noopener noreferrer">Colorlib</a>.</p>
 				</div>
 				<div class="footer-links">
-						<a href="#">Privacy Politics</a>
-						<a href="#">Legal Terms</a>
-						<a href="#">Cookies politics</a>
-						<a href="#">Credits</a>
-					</div>
+					<a href="#">Privacy Politics</a>
+					<a href="#">Legal Terms</a>
+					<a href="#">Cookies politics</a>
+					<a href="#">Credits</a>
+				</div>
 			</div>
 			<div class="footer-bottom d-flex justify-content-between align-items-center">
 				<p class="footer-text m-0">Copyright &copy; 2017 | All rights reserved to <a href="#">Datarc inc.</a>
