--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/bxslider.min.css">
 	</head>
 	<body>
 		<div id="top"></div>
@@ -297,6 +298,28 @@
 			</div>
 		</section>
 		<!-- End Product Area -->
+		<!-- Start Why Us Area -->
+		<section class="container slider-container">
+			<div class="row">
+				<div class="col-xs-12 col-md-6">
+					<h1 class="section-slider-title">¿Por qué nosotros?</h2>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum qui omnis, vel ad tempore rerum doloribus dolores, nam laboriosam doloremque vitae delectus. Nobis asperiores eos beatae impedit, rem placeat modi?</p>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum qui omnis, vel ad tempore rerum doloribus dolores, nam laboriosam doloremque vitae delectus. Nobis asperiores eos beatae impedit, rem placeat modi?</p>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum qui omnis, vel ad tempore rerum doloribus dolores, nam laboriosam doloremque vitae delectus. Nobis asperiores eos beatae impedit, rem placeat modi?</p>
+				</div>
+				<div class="col-xs-12 col-md-6">
+					<div class="slider">
+						<div class="element-1">
+							<img src="./img/slider/slide-1.png" alt="">
+						</div>
+						<div class="element-2">
+							<img src="./img/slider/slide-2.png" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- End Why Us Area -->
 		<!-- Start Progress Bar Area -->
 		<div class="container pt-150">
 			<div class="row">
@@ -1122,6 +1145,7 @@
 		<script src="js/parallax.js"></script>
 		<script src="js/slide-parallax.js"></script>
 		<script src="js/vendor/jquery-2.2.4.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 		<script src="js/vendor/bootstrap.min.js"></script>
 		<script src="js/jquery.ajaxchimp.min.js"></script>
