RCU-WS-001-NavbarMissingChanges

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 			
 				 <div class="standard-menu">
 					<ul class="menu-table">
-					   <li><a class="nav-link" href='#'>Home</a></li>
-					   <li><a class="nav-link" href='#'>About</a></li>
-					   <li><a class="nav-link" href='#'>Portfolio</a></li>
-				 	   <li><a class="nav-link" href='#'>Services</a></li>
-					   <li><a class="nav-link" href='#'>Prices</a></li>
-					   <li><a class="nav-link" href='#'>Team</a></li>
+					   <li><a class="nav-link nav-s" href='#'>Home</a></li>
+					   <li><a class="nav-link nav-s" href='#about'>About</a></li>
+					   <li><a class="nav-link nav-s" href='#portfolio'>Portfolio</a></li>
+				 	   <li><a class="nav-link nav-s" href='#'>Services</a></li>
+					   <li><a class="nav-link nav-s" href='#'>Prices</a></li>
+					   <li><a class="nav-link nav-s" href='#team'>Team</a></li>
 					   <div class="btn-group">
-						<button type="button" class="nav-link btnlink dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<button type="button" class="nav-link nav-s btnlink dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						Blog <span class="caret"></span>
 						</button>
 						<ul class="dropdown-menu">
@@ -55,7 +55,7 @@
 						<li class="submenu-li"><a class="submenu" href="#">Blog post 2</a></li>
 						</ul>
 						</div>
-					  <li><a class="nav-link" href='#'>Contact</a></li>
+					  <li><a class="nav-link nav-s" href='#'>Contact</a></li>
 
 					</ul>
 					 
@@ -64,11 +64,11 @@
 					   <div class="flex-center p-5">
 						  <ul class="nav flex-column">
 							<img src="img/RCU/RCUlogoBlanco-256px.png" alt="">							 <li class="nav-item delay-1"><a class="nav-link control" href="#">Home</a></li>
-							 <li class="nav-item delay-1"><a class="nav-link control" href="#">About</a></li>
-							 <li class="nav-item delay-2"><a class="nav-link control" href="#">Portfolio</a></li>
+							 <li class="nav-item delay-1"><a class="nav-link control" href="#about">About</a></li>
+							 <li class="nav-item delay-2"><a class="nav-link control" href="#portfolio">Portfolio</a></li>
 							 <li class="nav-item delay-3"><a class="nav-link control" href="#">Services</a></li>
 							 <li class="nav-item delay-4"><a class="nav-link control" href="#">Prices</a></li>
-							 <li class="nav-item delay-5"><a class="nav-link control" href="#">Team</a></li>
+							 <li class="nav-item delay-5"><a class="nav-link control" href="#team">Team</a></li>
 							 <li class="nav-item delay-6"><a class="nav-link control" href="#">Blog</a></li>
 							 <li class="nav-item delay-7"><a class="nav-link control" href="#">Contact</a></li>
 						  </ul>
@@ -100,7 +100,7 @@
 		</section>
 		<!-- End Banner Area -->
 		<!-- Start Product Area -->
-		<section id="services" class="title-bg section-full">
+		<section id="about" class="title-bg section-full">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-lg-8">
@@ -197,7 +197,7 @@
 		</section>
 		<!-- End About Area -->
 		<!-- Start Product Area -->
-		<section id="services" class="title-bg section-full ourprojects">
+		<section id="portfolio" class="title-bg section-full ourprojects">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-lg-8">
