--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum qui omnis, vel ad tempore rerum doloribus dolores, nam laboriosam doloremque vitae delectus. Nobis asperiores eos beatae impedit, rem placeat modi?</p>
 				</div>
 				<div class="col-xs-12 col-md-6">
-					<div class="slider">
+					<div class="slider1">
 						<div class="element-1">
 							<img src="./img/slider/slide-1.png" alt="">
 						</div>
@@ -440,28 +440,29 @@
 </section>
 	<!-- End Parallax01 Section -->
 	<!-- Start Parallax02 Section -->
-	<section id="parallax" class="pr-slider owl-carousel">
-		<div class="slider-block-testimonial" style="background-image: url('img/galaxy-milky-way.jpg');" data-stellar-background-ratio="0.5">
-			<div class="d-flex justify-content-center text-center" >
-				<div class="slider">
-					<div class="element-1"> 
-						<q>I love you the more in that I believe you had liked me for my own sake and for nothing else</q>
-						  <p class="author">- John Keats</p>
-					</div>
-					<div class="element-2">
-						<q>But man is not made for defeat. A man can be destroyed but not defeated.</q>
-						  <p class="author">- Ernest Hemingway</p>
-					</div>
-					<div class="element-3">
-						<q>I have not failed. I've just found 10,000 ways that won't work.</q>
-						  <p class="author">- Thomas A. Edison</p>
+	<section id="parallax" class="pr-slider owl-carousel slider-block-testimonial" data-stellar-background-ratio="0.5">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12" >
+					<div class="slider2">
+						<div class="slide2-element text-center"> 
+							<q>I love you the more in that I believe you had liked me for my own sake and for nothing else</q>
+								<p class="author">- John Keats</p>
+						</div>
+						<div class="slide2-element text-center">
+							<q>But man is not made for defeat. A man can be destroyed but not defeated.</q>
+								<p class="author">- Ernest Hemingway</p>
+						</div>
+						<div class="slide2-element text-center">
+							<q>I have not failed. I've just found 10,000 ways that won't work.</q>
+							<p class="author">- Thomas A. Edison</p>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 	<!-- End Parallax02 Section -->
-
 		
 		<!-- Start shuffle Area -->
 		<section id="protfolio" class="section-full">
@@ -1164,7 +1165,6 @@
 		<script src="js/owl.carousel.min.js"></script>
 		<script src="js/mixitup.min.js"></script>
 		<script src="js/main.js"></script>
-		<script src="js/parallax.js"></script>
 		<script src="js/navbar.js"></script>
 	</body>
 </html>
