--- a/index.html
+++ b/index.html
@@ -310,17 +310,17 @@
 		</section>
 		<!-- End Product Area -->
 		<!--Start Our Services Area-->
-		<section class="title-bg section-full our-services-container">
+		<section class="title-bg section-full our-services-container">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-lg-8">
 						<div class="product-area-title text-center">
-							<h2 class="text-black h1">Our Services</h2>
+							<h2 class="text-white h1">Our Services</h2>
 						</div>
 					</div>
 				</div>
 				<div class="row justify-content-center">
-					<div class="col-lg-4 col-sm-6">
+					<div class="col-lg-4 col-ms-6">
 						<div class="single-product our-services-card">
 							<div class="icon">
 								<img src="img/84px/íconos RCU-04.png" alt="first_services_icon">
@@ -332,7 +332,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-sm-6">
+					<div class="col-lg-4 col-ms-6">
 						<div class="single-product our-services-card">
 							<div class="icon">
 								<img src="img/84px/íconos RCU-05.png" alt="secon_services_icon">
@@ -344,7 +344,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-sm-6">
+					<div class="col-lg-4 col-ms-6">
 						<div class="single-product our-services-card">
 							<div class="icon">
 								<img src="img/84px/íconos RCU-06.png" alt="third_services_icon">
@@ -356,7 +356,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-sm-6">
+					<div class="col-lg-4 col-ms-6">
 						<div class="single-product our-services-card">
 							<div class="icon">
 								<img src="img/84px/íconos RCU-07.png" alt="fourth_services_icon">
@@ -368,7 +368,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-sm-6">
+					<div class="col-lg-4 col-ms-6">
 						<div class="single-product our-services-card">
 							<div class="icon">
 								<img src="img/84px/íconos RCU-08.png" alt="fifth_services_icon">
@@ -380,7 +380,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-sm-6">
+					<div class="col-lg-4 col-ms-6">
 						<div class="single-product our-services-card">
 							<div class="icon">
 								<img src="img/84px/íconos RCU-09.png" alt="sixth_services_icon">
