Particle JS to Welcome Section
Adding Animated funny stars section

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		<!-- End Header Area -->
 		<!-- Start Banner Area -->
 		<section class="banner-area relative">
-			<div class="overlay overlay-bg"></div>
+			<div id="particles-js" class="overlay overlay-bg"></div>
 			<div class="container">
 				<div class="row fullscreen justify-content-center align-items-center">
 					<div class="col-lg-8">
@@ -922,5 +922,7 @@
 		<script src="js/mixitup.min.js"></script>
 		<script src="js/main.js"></script>
 		<script src="js/navbar.js"></script>
+		<script src="js/particles.js"></script>
+		<script src="js/app.js"></script>
 	</body>
 </html>
