--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					   <li><a class="nav-link nav-s" href='#'>Home</a></li>
 					   <li><a class="nav-link nav-s" href='#about'>About</a></li>
 					   <li><a class="nav-link nav-s" href='#portfolio'>Portfolio</a></li>
-				 	   <li><a class="nav-link nav-s" href='#'>Services</a></li>
+				 	   <li><a class="nav-link nav-s" href='#services'>Services</a></li>
 					   <li><a class="nav-link nav-s" href='#'>Prices</a></li>
 					   <li><a class="nav-link nav-s" href='#team'>Team</a></li>
 					   <div class="btn-group">
@@ -55,7 +55,7 @@
 						<li class="submenu-li"><a class="submenu" href="#">Blog post 2</a></li>
 						</ul>
 						</div>
-					  <li><a class="nav-link nav-s" href='#'>Contact</a></li>
+					  <li><a class="nav-link nav-s" href='#contact'>Contact</a></li>
 
 					</ul>
 					 
@@ -66,11 +66,11 @@
 							<img src="img/RCU/RCUlogoBlanco-256px.png" alt="">							 <li class="nav-item delay-1"><a class="nav-link control" href="#">Home</a></li>
 							 <li class="nav-item delay-1"><a class="nav-link control" href="#about">About</a></li>
 							 <li class="nav-item delay-2"><a class="nav-link control" href="#portfolio">Portfolio</a></li>
-							 <li class="nav-item delay-3"><a class="nav-link control" href="#">Services</a></li>
+							 <li class="nav-item delay-3"><a class="nav-link control" href="#services">Services</a></li>
 							 <li class="nav-item delay-4"><a class="nav-link control" href="#">Prices</a></li>
 							 <li class="nav-item delay-5"><a class="nav-link control" href="#team">Team</a></li>
 							 <li class="nav-item delay-6"><a class="nav-link control" href="#">Blog</a></li>
-							 <li class="nav-item delay-7"><a class="nav-link control" href="#">Contact</a></li>
+							 <li class="nav-item delay-7"><a class="nav-link control" href="#contact">Contact</a></li>
 						  </ul>
 					   </div>
 					</div>
@@ -264,7 +264,7 @@
 		</section>
 		<!-- End Product Area -->
 		<!--Start Our Services Area-->
-		<section class="title-bg section-full our-services-container">
+		<section id="services" class="title-bg section-full our-services-container">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-lg-8">
