RCU-WS-008-Team-Section-Links

--- a/index.html
+++ b/index.html
@@ -653,8 +653,8 @@
 							<div class="thumb relative" style="background: url(img/Yisus.png);">
 								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
 									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
+										<a href="https://github.com/yisusvii" target="_blank"><i class="fa fa-github"></i></a>
+										<a href="https://www.linkedin.com/in/yisusvii" target="_blank"><i class="fa fa-linkedin"></i></a>
 									</div>
 									<div class="line"></div>
 									<div class="social d-flex align-items-center justify-content-center">
@@ -672,8 +672,8 @@
 							<div class="thumb relative" style="background: url(img/Yissel.png);">
 								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
 									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
+										<a href="https://github.com/yisspiix3"  target="_blank"><i class="fa fa-github"></i></a>
+										<a href="https://www.linkedin.com/in/yisselmar%C3%ADnlombard" target="_blank"><i class="fa fa-linkedin"></i></a>
 									</div>
 									<div class="line"></div>
 									<div class="social d-flex align-items-center justify-content-center">
@@ -691,8 +691,8 @@
 							<div class="thumb relative" style="background: url(img/Eli.png);">
 								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
 									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
+										<a href="https://github.com/Etaboada95/" target="_blank"><i class="fa fa-github"></i></a>
+										<a href="https://www.linkedin.com/in/eli-taboada-rojas-a97367128/" target="_blank"><i class="fa fa-linkedin"></i></a>
 									</div>
 									<div class="line"></div>
 									<div class="social d-flex align-items-center justify-content-center">
@@ -710,8 +710,8 @@
 							<div class="thumb relative" style="background: url(img/Ron.pnG);">
 								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
 									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
+										<a href="https://github.com/Ronaldo-Kadenasty" target="_blank"><i class="fa fa-github"></i></a>
+										<a href="https://www.linkedin.com/in/ronaldo-rodriguez-gamboa-b73550194" target="_blank"><i class="fa fa-linkedin"></i></a>
 									</div>
 									<div class="line"></div>
 									<div class="social d-flex align-items-center justify-content-center">
@@ -729,8 +729,8 @@
 							<div class="thumb relative" style="background: url(img/Fer.png);">
 								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
 									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
+										<a href="https://github.com/Chaan25" target="_blank"><i class="fa fa-github"></i></a>
+										<a href="https://www.linkedin.com/in/fernando-p%C3%A9rez-b00154168" target="_blank"><i class="fa fa-linkedin"></i></a>
 									</div>
 									<div class="line"></div>
 									<div class="social d-flex align-items-center justify-content-center">
@@ -748,8 +748,8 @@
 							<div class="thumb relative" style="background: url(img/Katia.png);">
 								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
 									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
+										<a href="https://github.com/KattiaOlmedo27"  target="_blank"><i class="fa fa-github"></i></a>
+										<a href="http://linkedin.com/in/katia-olmedo-5848a1141"  target="_blank"><i class="fa fa-linkedin"></i></a>
 									</div>
 									<div class="line"></div>
 									<div class="social d-flex align-items-center justify-content-center">
@@ -767,8 +767,8 @@
 							<div class="thumb relative" style="background: url(img/Marco.png);">
 								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
 									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
+										<a href="https://github.com/marcohesa" target="_blank"><i class="fa fa-github"></i></a>
+										<a href="https://www.linkedin.com/in/marco-antonio-hernández-salas-583174172/" target="_blank"><i class="fa fa-linkedin"></i></a>
 									</div>
 									<div class="line"></div>
 									<div class="social d-flex align-items-center justify-content-center">
@@ -786,8 +786,8 @@
 							<div class="thumb relative" style="background: url(img/Saulo.png);">
 								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
 									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
+										<a href="https://github.com/Saulo-Colorado"  target="_blank"><i class="fa fa-github"></i></a>
+										<a href="https://www.linkedin.com/in/saulo-colorado-vasquez-157967171/" target="_blank"><i class="fa fa-linkedin"></i></a>
 									</div>
 									<div class="line"></div>
 									<div class="social d-flex align-items-center justify-content-center">
@@ -805,8 +805,8 @@
 							<div class="thumb relative" style="background: url(img/Rafa.jpg);">
 								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
 									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
+										<a href="https://github.com/schezrafael" target="_blank"><i class="fa fa-github"></i></a>
+										<a href="https://www.linkedin.com/in/schezrafael/" target="_blank"><i class="fa fa-linkedin"></i></a>
 									</div>
 									<div class="line"></div>
 									<div class="social d-flex align-items-center justify-content-center">
@@ -824,8 +824,8 @@
 							<div class="thumb relative" style="background: url(img/Cesar.jpg);">
 								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
 									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
+										<a href="#" target="_blank"><i class="fa fa-github"></i></a>
+										<a href="http://linkedin.com/in/cesar-ulises-chavarria-tableros-816999178/" target="_blank"><i class="fa fa-linkedin"></i></a>
 									</div>
 									<div class="line"></div>
 									<div class="social d-flex align-items-center justify-content-center">
@@ -843,8 +843,8 @@
 							<div class="thumb relative" style="background: url(img/Saul.jpg);">
 								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
 									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
+										<a href="https://github.com/SMontero90" target="_blank"><i class="fa fa-github"></i></a>
+										<a href="https://www.linkedin.com/in/saulmontero495254b6" target="_blank"><i class="fa fa-linkedin"></i></a>
 									</div>
 									<div class="line"></div>
 									<div class="social d-flex align-items-center justify-content-center">
