--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 			</section>
 		<!-- End Header Area -->
 		<!-- Start Banner Area -->
-		<section class="banner-area relative">
-			<div id="particles-js" class="overlay overlay-bg"></div>
-			<div class="container">
-				<div class="row fullscreen justify-content-center align-items-center">
+		<section class="banner-area start-banner-container">
+			<div id="particles-js"></div>
+			<div class="container relative ">
+				<div class="row fullscreen justify-content-center align-items-center text-center">
 					<div class="col-lg-8">
 						<div class="banner-content text-center">
 							<img src="img/RCU_Logo.png" class="img-fluid" alt="Responsive image">
@@ -91,12 +91,15 @@
 								<br>Ready to bring your Software/Digital 
 								<br>Ideas to the Real World
 							</p>
+						</div>
+						<div class="buttons-start ">
 							<a href="#" class="primary-btn banner-btn-b">Why Us ?</a>
 							<a href="#" class="primary-btn banner-btn">Our Services</a>
 						</div>
 					</div>
 				</div>
 			</div>
+			
 		</section>
 		<!-- End Banner Area -->
 		<!-- Start Product Area -->
